--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -163,11 +163,17 @@ Component
 //fade up
 .js-scrollin {
 	opacity: 0;
-	visibility: hidden;
+	-webkit-transform: translate(0, 70px);
+	-ms-transform: translate(0, 70px);
+	transform: translate(0, 70px);
 	&.fade{
 		opacity: 1;
-		visibility: visible;
-		transition: 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+		-webkit-transform: translate(0, 0);
+		-ms-transform: translate(0, 0);
+		transform: translate(0, 0);
+		-webkit-transition: 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+		-o-transition: 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+		transition: 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 	}
 }
 
