--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -443,7 +443,7 @@
 			margin: 0 -28px 0 -29%;
 			position: relative;
 			@media screen and (max-width: 1660px) {
-				margin-left: calc((100vw - 191%) / 2* -1);
+				margin-left: calc((100vw - 200%) / 2* -1);
 				padding-right: 15px;
 			}
 			@include mq(lg){
@@ -475,6 +475,11 @@
 		z-index: 1;
 		@include mq(lg){
 			width: 100%;
+		}
+		@include mq(){
+			&>p{
+				text-align: center;
+			}
 		}
 	}
 }
@@ -537,6 +542,11 @@
 			padding: 0;
 			order: 2;
 		}
+		@include mq(){
+			>p{
+				text-align: center;
+			}
+		}
 	}
 	&__img{
 		width: 50%;
@@ -549,9 +559,12 @@
 			margin: 0 -28.5% 0 0;
 			position: relative;
 			@include mq(mac){
-				margin-right: calc(((100vw - 190%) / 2)* -1);
+				margin-right: calc(((100vw - 200%) / 2)* -1);
 			}
-
+			@include mq(lg){
+				margin: 0 -5% 0 0;
+				padding: 0;
+			}
 			&:after{
 				content: "";
 				position: absolute;
@@ -588,7 +601,11 @@
 		padding: 0 10px;
 		@include mq(){
 			width: 100%;
+			order: 2;
 			margin-bottom: 20px;
+			&:last-child{
+				order: 3;
+			}
 		}
 	}
 	&__img{
@@ -598,6 +615,7 @@
 			width: 100%;
 			padding: 0 10px;
 			margin-bottom: 20px;
+			order: 1;
 		}
 		img{
 			width: 100%;
@@ -725,6 +743,7 @@
 			width: 100%;
 			padding: 0;
 			margin-bottom: 30px;
+			text-align: center;
 		}
 		p{
 			margin-bottom: 37px;
@@ -849,6 +868,9 @@
 			&:last-child{
 				margin-bottom: 0;
 			}
+			>p{
+				text-align: center;
+			}
 		}
 	}
 	&__ttl{
@@ -857,6 +879,7 @@
 		@include font-size(32);
 		margin-bottom: 2px;
 		@include mq(){
+			text-align: center;
 			@include font-size(24);
 			line-height: 1.4;
 			margin-bottom: 15px;
