--- a/css/styles.css
+++ b/css/styles.css
@@ -2326,7 +2326,7 @@ textarea.form-control {
   }
 }
 .setup-block__ct {
-  width: 50%;
+  width: 46.5%;
   padding: 0 3% 0 0;
 }
 @media screen and (max-width: 834px) {
@@ -2374,8 +2374,9 @@ textarea.form-control {
   }
 }
 .setup-block__img {
-  width: 50%;
+  width: 53.5%;
   position: relative;
+  padding-left: 4px;
 }
 @media screen and (max-width: 834px) {
   .setup-block__img {
@@ -2400,6 +2401,10 @@ textarea.form-control {
   .setup-block__img:after {
     display: none;
   }
+}
+.setup-block__img .slick-list {
+  position: relative;
+  z-index: 1;
 }
 
 .setup-step {
@@ -2585,13 +2590,12 @@ textarea.form-control {
 }
 .ograni-block__img .img {
   padding: 40px 0 0 0;
-  margin: 0 -28px 0 -29%;
+  margin: 0 0 0 -29%;
   position: relative;
 }
 @media screen and (max-width: 1660px) {
   .ograni-block__img .img {
     margin-left: calc((100vw - 200%) / 2 * -1);
-    padding-right: 15px;
   }
 }
 @media screen and (max-width: 990px) {
@@ -2701,6 +2705,11 @@ textarea.form-control {
 .change-block__ct {
   width: 50%;
   padding: 0 15px 0 0;
+}
+@media screen and (min-width: 1092px) {
+  .change-block__ct .c-ttl__01 span {
+    margin-left: 0;
+  }
 }
 @media screen and (max-width: 990px) {
   .change-block__ct {
