--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -206,7 +206,7 @@
 		margin-bottom: 50px;
 	}
 	&__ct{
-		width: 50%;
+		width: 46.5%;
 		padding: 0 3% 0 0;
 		@include mq(){
 			width: 100%;
@@ -256,8 +256,9 @@
 		}
 	}
 	&__img{
-		width: 50%;
+		width: 53.5%;
 		position: relative;
+		padding-left: 4px;
 		@include mq(){
 			display: none;
 		}
@@ -281,6 +282,10 @@
 			@include mq(){
 				display: none;
 			}
+		}
+		.slick-list{
+			position: relative;
+			z-index: 1;
 		}
 	}
 }
@@ -440,11 +445,10 @@
 		}
 		.img{
 			padding: 40px 0 0 0;
-			margin: 0 -28px 0 -29%;
+			margin: 0 0 0 -29%;
 			position: relative;
 			@media screen and (max-width: 1660px) {
 				margin-left: calc((100vw - 200%) / 2* -1);
-				padding-right: 15px;
 			}
 			@include mq(lg){
 				margin: 0;
@@ -537,6 +541,12 @@
 	&__ct{
 		width: 50%;
 		padding: 0 15px 0 0;
+		.c-ttl__01 span{
+
+			@media screen and (min-width: 1092px) {
+				margin-left: 0;
+			}
+		}
 		@include mq(lg){
 			width: 100%;
 			padding: 0;
