--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -5,6 +5,9 @@
 	min-height: 100vh;
 	text-align: center;
 	padding: 160px 0 0;
+	@include mq(mac){
+		padding: 130px 0 0;
+	}
 	//&:before{
 	//	content: "";
 	//	position: absolute;
@@ -24,6 +27,9 @@
 .mv-heading{
 	display: block;
 	margin-bottom: 29px;
+	@include mq(mac){
+		margin-bottom: 20px;
+	}
 	&__note{
 		display: inline-block;
 		@include font-size(18);
@@ -33,6 +39,9 @@
 		padding: 10px 57px;
 		border-radius: 30px;
 		margin-bottom: 24px;
+		@include mq(mac){
+			@include font-size(16);
+		}
 		@include mq(){
 			@include font-size(14);
 			padding: 10px 40px;
@@ -66,9 +75,8 @@
 	&__ttl{
 		display: block;
 		//@include font-size(60);
-		font-size: clamp(26px,3.125vw,60px);
+		font-size: clamp(26px, 2.9vw, 60px);
 		font-weight: bold;
-		line-height: 1.5;
 		letter-spacing: 0.5px;
 		@include mq(){
 			line-height: 1.4;
@@ -76,7 +84,7 @@
 	}
 }
 .mv-item{
-	@include font-size(24);
+	font-size: clamp(1.6rem,1.25vw,2.4rem);
 	font-weight: 600;
 	margin-bottom: 19px;
 	@include mq(){
@@ -84,6 +92,9 @@
 	}
 	p{
 		margin-bottom: 31px;
+		@include mq(mac){
+			margin-bottom: 20px;
+		}
 		@include mq(){
 			margin-bottom: 20px;
 		}
@@ -92,10 +103,16 @@
 		display: inline-block;
 		position: relative;
 		@include font-size(20);
+		font-size: clamp(1.4rem,1.041vw,2.0rem);
 		text-transform: uppercase;
 		font-weight: 500;
 		padding: 0 130px;
 		margin-bottom: 41px;
+		@include mq(mac){
+			padding: 0 90px;
+			@include font-size(16);
+			margin-bottom: 20px;
+		}
 		@include mq(){
 			@include font-size(14);
 			padding: 0 40px;
@@ -106,6 +123,9 @@
 			height: 2px;
 			position: absolute;
 			bottom: 6px;
+			@include mq(mac){
+				width: 80px;
+			}
 			@include mq(){
 				width: 30px;
 			}
@@ -124,16 +144,16 @@
 	&__btn{
 		@include flex(center,center,wrap);
 		margin-bottom: 66px;
-		@include mq(){
+		@include mq(mac){
 			margin-bottom: 30px;
 		}
 		a{
 			@include flex(center,center,wrap);
 			text-align: center;
 			color: white;
-			width: 240px;
-			height: 60px;
-			@include font-size(18);
+			width: clamp(160px,12.5vw,240px);
+			height: clamp(46px,3.125vw,60px);
+			font-size: clamp(1.4rem,0.9375vw,1.8rem);
 			font-weight: 600;
 			border-radius: 8px;
 			margin: 0 15px;
@@ -157,6 +177,9 @@
 		@include flex(center,center,wrap);
 		@include font-size(18);
 		font-weight: bold;
+		@include mq(mac){
+			@include font-size(16);
+		}
 		@include mq(sm){
 			@include font-size(14);
 		}
@@ -173,6 +196,9 @@
 				position: absolute;
 				@include v-align;
 				left: 0;
+				@include mq(mac){
+					width: 20px;
+				}
 				@include mq(){
 					width: 18px;
 				}
@@ -436,7 +462,10 @@
 }
 .ograni-block{
 	@include flex(0,0,wrap);
-	margin-bottom: 47px;
+	margin-bottom: 100px;
+	@include mq(){
+		margin-bottom: 50px;
+	}
 	&__img{
 		width: 51.5%;
 		@include mq(lg){
@@ -444,7 +473,7 @@
 			margin-bottom: 30px;
 		}
 		.img{
-			padding: 40px 0 0 0;
+			padding: 40px 15px 0 0;
 			margin: 0 0 0 -29%;
 			position: relative;
 			@media screen and (max-width: 1660px) {
